fix cascading issue for responsive design on small tablets and smaller; move new delete button there

--- a/src/index.css
+++ b/src/index.css
@@ -325,19 +325,7 @@ input[type="text"], select {
 
 /* Use for smaller tablets / phones */
 #small-delete-btn {
-  all: unset;
-  display: inline-flex;
   display: none;
-  justify-content: center;
-  align-items: center;
-  width: 1.5rem;
-  height: 1.5rem;
-  border-radius: 50%;
-  font-size: 1rem;
-  background-color: #d46a6a;
-  color: var(--btn-text-color);
-  box-shadow: var(--btn-shadow);
-  cursor: pointer;
 }
 
 .delete-btn:hover, .clear-btn:hover, #small-delete-btn:hover {
@@ -645,7 +633,7 @@ input, select {
   }
 }
 
-@media only screen and (min-width: 660px) and (max-width: 970px) {
+@media only screen and (max-width: 970px) {
   h1 {
     margin: .5rem;
   }
@@ -669,6 +657,25 @@ input, select {
     height: 5rem;
     font-size: 2.5rem;
     left: 30%;
+  }
+
+  .delete-btn {
+    display: none;
+  }
+
+  #small-delete-btn {
+    all: unset;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+    font-size: 1rem;
+    background-color: #d46a6a;
+    color: var(--btn-text-color);
+    box-shadow: var(--btn-shadow);
+    cursor: pointer;
   }
 
   /** Grocery */
